# mlops

./: .gitignore  pyproject.toml
airflow/: airflow.cfg  airflow.db  simple_auth_manager_passwords.json.generated
airflow/dags/: week3dag.py
mlruns/0/: meta.yaml
mlruns/167911647173522940/: meta.yaml
mlruns/167911647173522940/130306d8fda04808a8b472c14d8a3ec2/: meta.yaml
mlruns/167911647173522940/a4230661937c4ef29eee638cf0486f8a/: meta.yaml
mlruns/167911647173522940/b89a562f3a02493c8ef291758d68b4f0/: meta.yaml
mlruns/167911647173522940/c9e86800634c421bb009e12b97997d40/: meta.yaml
mlruns/947117018266877262/: meta.yaml
mlruns/947117018266877262/18d2c4f667c547ea94b8d3cd16b0eef5/: meta.yaml
mlruns/947117018266877262/314529f435d54ad58596f44105205a54/: meta.yaml
mlruns/947117018266877262/3db40fe1dbb24f8e8b2a98a24e5ccaec/: meta.yaml
mlruns/947117018266877262/53ea3a68a4144ac7b4b93d51200a8609/: meta.yaml
mlruns/947117018266877262/65a9ba51698a495ebf9903b414316c3f/: meta.yaml
mlruns/947117018266877262/93ae3532f11847f8a4c2bac32e714afe/: meta.yaml
mlruns/947117018266877262/9c398605f1ca4af9ab13729a422edeb8/: meta.yaml
mlruns/947117018266877262/a07f8379ca94414188fedcc96e93a82b/: meta.yaml
mlruns/947117018266877262/a2d53c3461164574b604ea8b0302ac20/: meta.yaml
mlruns/947117018266877262/ba17d6a61b234423b3fef5d07c8bc0f3/: meta.yaml
mlruns/947117018266877262/c26a3b0cb7b44c1c9b5b1ab7594d5fc5/: meta.yaml
mlruns/947117018266877262/c7edf1e9ae794118a2bb5dff16fff31f/: meta.yaml
mlruns/947117018266877262/f9f85013be304ad8b36e972c397f9a53/: meta.yaml
(+230 files in other folders)
