[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "JagpreetJakhar", email = "jagpreetjakhar94@gmail.com" }
]
requires-python = ">=3.12.3"
dependencies = []

[project.scripts]
mlops = "mlops:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
