[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "JagpreetJakhar", email = "jagpreetjakhar94@gmail.com" }
]
requires-python = ">=3.12.3"
dependencies = [
    "apache-airflow>=3.0.1",
    "matplotlib>=3.10.3",
    "mlflow==2.22.0",
    "pandas>=2.2.3",
    "prettytable>=3.16.0",
    "psutil>=7.0.0",
    "pynvml>=12.0.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
]

[project.scripts]
mlops= "mlops:main"
week1 = "mlops.week1.week_1:main"
week1hw = "mlops.week1.week_1hw:main"
week2 = "mlops.week2.week_2:main"
week3 = "mlops.week3.week_3:main"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
